<resources>
    <string name="app_name">Informator</string>
    <string name="mainActivity_btnLogin_text">Log In</string>
    <string name="mainActivity_btnRegister_text">Register</string>
    <string name="mainActivity_btnSignUp_text">Sign Up</string>
    <string name="add_group">Add Group</string>
    <string name="find_group">Find Group</string>
    <string name="add_event">Add Event</string>
    <string name="find_event">Find Event</string>
    <string name="search_on_map">Search on map</string>
    <string name="groups">Groups</string>
    <string name="map">Map</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="search_friends">Search friends</string>
    <string name="add_friends_bluetooth">Add friends via bluetooth</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit profile</string>
    <string name="friends">Friends</string>
    <string name="points">Points</string>
    <string name="popup_add_virtual_object_title">Create virtual object</string>
    <string name="add_photo">Add photo:</string>
    <string name="description">Description:</string>
    <string name="type_description">Type a description...</string>
    <string name="create">Create</string>

    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="no_ranking">There is no ranking at the moment. Please try again later.</string>
    <string name="no_friends">There is no friends.</string>
    <string name="no_photos">There is no photos.</string>
    <string name="no_events">There is no events at the moment. Please try again later.</string>
    <string name="no_text">Empty</string>

    <string name="virtual_object">Virtual object</string>
    <string name="write_comment">Write a comment...</string>
    <string name="open_comments">OpenComments123</string>
    <string name="single_group">SingleGroup</string>
    <string name="post">Post</string>
    <string name="comments">Comments</string>
    <string name="search_in_radius">Search in radius</string>

    <string name="virtualObjectId">Object5</string>
    <string name="open_listVO">OpenListVo123</string>
    <string name="edit_profile_id">aasd3#</string>
    <string name="single_event_id">j51s@@asd#</string>

    <string name="settings">Settings</string>
    <string name="location_settings">Location Tracker</string>
    <string name="channel_name">Notify object find</string>
    <string name="channel_description">Notify user when find object or friend near him.</string>
    <string name="pick_date">Pick Date</string>
    <string name="set_time">Set Time</string>
    <string name="notifications">Notifications</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="add_location">Add Location</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>





    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBgfNFwt06DZZQyugZ25EpsFJ-LjDRB8ho</string>

</resources>
