<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_friends_bluetooth"
        android:icon="@drawable/ic_bluetooth_black_24dp"
        android:title="@string/add_friends_bluetooth"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/search_friends"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_friends"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/send_message"
        android:icon="@drawable/rotate_send_icon"
        android:title="@string/messages"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout"
        app:showAsAction="ifRoom"
        />
</menu>