<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_virtual_object_on_map"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add_group"
        app:showAsAction="ifRoom"
        >

    </item>



    <item
        android:id="@+id/search_on_map"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/map"
        app:showAsAction="ifRoom"
        >

    </item>

    <item
        android:id="@+id/search_in_radius"
        android:icon="@drawable/ic_gps_fixed_black_24dp"
        android:title="@string/search_in_radius"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/id_show_default"
        android:title="Default display">

    </item>

    <item
        android:id="@+id/id_show_online_friends"
        android:title="Online friends display">

    </item>

    <item
        android:id="@+id/id_show_virtual_objects"
        android:title="Virtual objects display">

    </item>



</menu>