<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_add_event_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/add_event"
        android:background="@color/color_white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        >

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="10"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_weight="2"
            android:scrollbarSize="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Title"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_today_black_24dp" />

                    <TextView
                        android:id="@+id/textView_editProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pick_date"
                        android:textColor="#000000"
                        android:textSize="20dp" />
                </LinearLayout>

                <DatePicker
                    android:id="@+id/event_date_pick"
                    style="@android:style/Widget.DatePicker"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:headerBackground="@color/color_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_access_time_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_time"
                        android:textColor="#000000"
                        android:textSize="20dp" />
                </LinearLayout>

                <TimePicker
                    android:id="@+id/event_time_pick"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:headerBackground="@color/color_gray"
                    android:timePickerMode="spinner" />

                <LinearLayout
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_notifications_active_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notifications"
                        android:textColor="#000000"
                        android:textSize="20dp" />

                    <Switch

                        android:id="@+id/switch_notifications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/invite_friend_click"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_person_add_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invite_friend"
                        android:textColor="#000000"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/add_location_click"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_place_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_location"
                        android:textColor="#000000"
                        android:textSize="20dp" />
                </LinearLayout>
                <Button
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/button_add_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_black_border"
                    />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10" />

    </LinearLayout>
</LinearLayout>