<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/profile"
        app:menu="@menu/fragment_profile_app_bar"
        android:background="@color/color_white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
        >

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="10"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                android:layout_weight="10">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_weight="2"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/profile_picture"
                        android:layout_margin="6dp"
                        android:layout_width="match_parent"
                        android:scaleType="centerCrop"
                        android:layout_height="match_parent"/>

                    <ImageView
                        android:src="@drawable/profile_picture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </FrameLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="10"
                    android:text="@string/edit_profile"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="10">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="4"
                    />
                <TextView
                    android:id="@+id/tvFriends"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="5"
                    android:text="@string/friends"
                    />
                <TextView
                    android:id="@+id/tvGroups"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="5"
                    android:text="@string/groups"
                    />
                <TextView
                    android:id="@+id/tvPoints"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="5"
                    android:text="@string/points"
                    />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="5"
        >
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout_profile"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            android:layout_width="match_parent"
            app:tabGravity="center"
            app:tabIndicatorHeight="4dp"
            app:tabIndicatorColor="@color/color_gray"
            app:tabBackground="@color/color_white"
            app:tabMode="fixed"
            >

        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>
</LinearLayout>